# pdf-mcp-server

./: .gitignore  README.md  pyproject.toml
src/pdf_mcp/: __init__.py  server.py
