[project]
name = "pdf-mcp-server"
version = "0.2.1"
description = "MCP server for reading PDF files with text and images in order"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pymupdf>=1.24.0",
]

# [DEPRECATED] Marker 기능 비활성화 (2026-02-01)
# 딥러닝 모델 로딩이 너무 오래 걸려서 비활성화함
# [project.optional-dependencies]
# marker = ["marker-pdf>=0.2.0"]

[project.scripts]
pdf-mcp = "pdf_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# hatchling이 src 폴더 안의 패키지를 찾도록 설정
[tool.hatch.build.targets.wheel]
packages = ["src/pdf_mcp"]
